--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -6,16 +6,16 @@
     {% block stylesheets %}
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Spartan&display=swap">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
-        {{ encore_entry_link_tags('app') }}
+{#        {{ encore_entry_link_tags('app') }}#}
     {% endblock %}
     {% block javascripts %}
-        {{ encore_entry_script_tags('app') }}
+{#        {{ encore_entry_script_tags('app') }}#}
     {% endblock %}
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light px-1">
     <div class="container-fluid">
-        <a class="navbar-brand" href="{{ path('app_homepage') }}">
+        <a class="navbar-brand" href="{{ path('home.index') }}">
             <p class="pl-2 d-inline font-weight-bold" style="color: #444;">
                 Cauldron Overflow</p>
         </a>
@@ -25,7 +25,7 @@
         <div class="collapse navbar-collapse" id="navbar-collapsable">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ path('app_popular_answers') }}">Answers</a>
+                    <a class="nav-link" href="/">Link1</a>
                 </li>
             </ul>
             <a class="nav-link text-black-50" href="{{ path('app_login') }}">Log In</a>
