--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -6,10 +6,10 @@
     {% block stylesheets %}
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Spartan&display=swap">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
-{#        {{ encore_entry_link_tags('app') }}#}
+        {{ encore_entry_link_tags('app') }}
     {% endblock %}
     {% block javascripts %}
-{#        {{ encore_entry_script_tags('app') }}#}
+        {{ encore_entry_script_tags('app') }}
     {% endblock %}
 </head>
 <body>
