Added remember me

--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -17,7 +17,7 @@
     <div class="container-fluid">
         <a class="navbar-brand" href="{{ path('home.index') }}">
             <p class="pl-2 d-inline font-weight-bold" style="color: #444;">
-                Cauldron Overflow</p>
+                Some logo</p>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-collapsable" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -35,7 +35,7 @@
 </nav>
 {% block body %}{% endblock %}
 <footer class="mt-5 p-3 text-center">
-    Made with <i style="color: red;" class="fa fa-heart"></i> by the guys and gals at <a style="color: #444; text-decoration: underline;" href="https://symfonycasts.com">SymfonyCasts</a>
+    Made with love <i style="color: red;" class="fa fa-heart"></i>
 </footer>
 </body>
 </html>
